# krdc

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  COPYING  Mainpage.dox  Makefile.am  Messages.sh  README  README.md  TODO  _rfb._tcp  bookmarkmanager.cpp  bookmarkmanager.h  config-kactivities.h.cmake  config-krdc.h.cmake  configure.in.in  connectiondelegate.cpp  connectiondelegate.h  cursor.c  desktop.c  events.h  factorwidget.cpp  factorwidget.h  floatingtoolbar.cpp  floatingtoolbar.h  fullscreentoolbar.ui  hextile.c  hostpreferences.cpp  hostpreferences.h  hostprofiles.cpp  hostprofiles.h  hostprofiles.ui  hostprofiles.ui.h  hostprofiles.ui3  keycapturedialog.cpp  keycapturedialog.h  keycapturedialog.ui  keycapturedialog2.cpp  (+81 more)
cmake/modules/: FindLibNXCL.cmake  FindLibSSH.cmake  FindLibVNCServer.cmake  FindTelepathyQt4.cmake  Findxfreerdp.cmake
config/: CMakeLists.txt  general.ui  hostpreferenceslist.cpp  hostpreferenceslist.h  krdc.kcfg  preferencesdialog.cpp  preferencesdialog.h  settings.kcfgc
core/: CMakeLists.txt  hostpreferences.cpp  hostpreferences.h  krdc.kcfg  krdc_export.h  krdc_plugin.desktop  logging.cpp  logging.h  remoteview.cpp  remoteview.h  remoteviewfactory.cpp  remoteviewfactory.h  settings.kcfgc  shortcutinhibition_p.h  sshtunnelthread.cpp  sshtunnelthread.h  sshtunnelwidget.cpp  sshtunnelwidget.h  sshtunnelwidget.ui  waylandinhibition.cpp  waylandinhibition_p.h
doc/: CMakeLists.txt  authentication.eps  index.docbook  krdc_window.eps  preferences_profilestab.eps  preferences_rdpdefaultstab.eps  preferences_vncdefaultstab.eps  snapshot.eps  snapshot_connectionspeed.eps  snapshot_nobrowse.eps  snapshot_vncentry.eps
konsole/: CMakeLists.txt  konsoleview.cpp  konsoleview.h  konsoleviewfactory.cpp  konsoleviewfactory.h  krdc_konsole.desktop  krdc_konsole.json
krdc_approver/: CMakeLists.txt  approver.cpp  approver.h  approvermanager.cpp  approvermanager.h  krdc_rfb_approver.client  krdc_rfb_approver.notifyrc  main.cpp  org.freedesktop.Telepathy.Client.krdc_rfb_approver.service.in
nx/: CMakeLists.txt  default.dsa.key  krdc_nx.desktop  krdc_nx_config.desktop  nx.protocol  nxcallbacks.cpp  nxcallbacks.h  nxclientthread.cpp  nxclientthread.h  nxhostpreferences.cpp  nxhostpreferences.h  nxpreferences.cpp  nxpreferences.h  nxpreferences.ui  nxresumesessions.cpp  nxresumesessions.h  nxresumesessions.ui  nxview.cpp  nxview.h  nxviewfactory.cpp  nxviewfactory.h
po/af/: krdc.po
po/ar/: krdc.po
po/az/: krdc.po
po/be/: krdc.po
po/bg/: krdc.po
po/br/: krdc.po
po/bs/: krdc.po
po/ca/: krdc.po
po/ca/docs/krdc/: index.docbook
po/ca@valencia/: krdc.po
po/cs/: krdc.po
po/cy/: krdc.po
po/da/: krdc.po
po/de/: krdc.po
po/de/docs/krdc/: index.docbook
po/el/: krdc.po
po/en_GB/: krdc.po
po/eo/: krdc.po
po/es/: krdc.po
po/es/docs/krdc/: index.docbook
po/et/: krdc.po
po/et/docs/krdc/: index.docbook
po/eu/: krdc.po
po/fa/: krdc.po
po/fi/: krdc.po
po/fr/: krdc.po
po/fr/docs/krdc/: index.docbook
po/ga/: krdc.po
po/gl/: krdc.po
po/he/: krdc.po
po/hi/: krdc.po
po/hne/: krdc.po
po/hr/: krdc.po
po/hsb/: krdc.po
po/hu/: krdc.po
po/ia/: krdc.po
po/is/: krdc.po
po/it/: krdc.po
po/it/docs/krdc/: index.docbook
po/ja/: krdc.po
po/ka/: krdc.po
po/kk/: krdc.po
po/km/: krdc.po
po/ko/: krdc.po
po/lt/: krdc.po
po/lv/: krdc.po
po/mai/: krdc.po
po/mk/: krdc.po
po/mr/: krdc.po
po/ms/: krdc.po
po/nb/: krdc.po
po/nds/: krdc.po
po/ne/: krdc.po
po/nl/: krdc.po
po/nl/docs/krdc/: index.docbook
po/nn/: krdc.po
po/oc/: krdc.po
po/pa/: krdc.po
po/pl/: krdc.po
po/pl/docs/krdc/: index.docbook
po/pt/: krdc.po
po/pt/docs/krdc/: index.docbook
po/pt_BR/: krdc.po
po/pt_BR/docs/krdc/: index.docbook
po/ro/: krdc.po
po/ru/: krdc.po
po/ru/docs/krdc/: index.docbook
po/sa/: krdc.po
po/se/: krdc.po
po/sk/: krdc.po
po/sl/: krdc.po
po/sl/docs/krdc/: index.docbook
po/sq/: krdc.po
po/sr/: krdc.po
po/sr/docs/krdc/: index.docbook  l10n-track
po/sr@ijekavian/: krdc.po
po/sr@ijekavianlatin/: krdc.po
po/sr@latin/: krdc.po
po/sr@latin/docs/krdc/: index.docbook
po/sv/: krdc.po
po/sv/docs/krdc/: index.docbook
po/ta/: krdc.po
po/tg/: krdc.po
po/th/: krdc.po
po/tr/: krdc.po
po/ug/: krdc.po
po/uk/: krdc.po
po/uk/docs/krdc/: index.docbook
po/vi/: krdc.po
po/xh/: krdc.po
po/zh_CN/: krdc.po
po/zh_HK/: krdc.po
po/zh_TW/: krdc.po
rdp/: CMakeLists.txt  Makefile.am  README.patch  bitmap.c  cache.c  constants.h  ewmhints.c  iso.c  krdc_rdp.desktop  krdc_rdp.json  krdc_rdp_config.desktop  krdpview.cpp  krdpview.h  licence.c  mcs.c  orders.c  orders.h  parse.h  proto.h  rdesktop.c  rdesktop.h  rdesktop.patch  rdp.c  rdp.protocol  rdpaadview.cpp  rdpaadview.h  rdpcliprdr.cpp  rdpcliprdr.h  rdpdisp.cpp  rdpdisp.h  rdpgraphics.cpp  rdpgraphics.h  rdphostpref.cpp  rdphostpref.h  rdphostpreferences.cpp  rdphostpreferences.h  rdphostpreferences.ui  rdphostpreferences.ui.h  rdppreferences.cpp  rdppreferences.h  (+19 more)
rdp/keymaps/: convert-map
test/: CMakeLists.txt  krdc_test.desktop  krdc_test.json  testview.cpp  testview.h  testviewfactory.cpp  testviewfactory.h
vnc/: CMakeLists.txt  Makefile.am  colour.c  d3des.h  desktop.c  hextile.c  krdc_vnc.desktop  krdc_vnc.json  krdc_vnc_config.desktop  kvncview.cpp  kvncview.h  main.cpp  pointerlatencyometer.h  rfbproto.c  rfbproto.h  sockets.c  threads.cpp  threads.h  tight.c  vnc.protocol  vncauth.c  vncauth.h  vncclientthread.cpp  vncclientthread.h  vnchostpref.cpp  vnchostpref.h  vnchostpreferences.cpp  vnchostpreferences.h  vnchostpreferences.ui  vncpreferences.cpp  vncpreferences.h  vncpreferences.ui  vncprefs.cpp  vncprefs.h  vncprefs.ui  vncprefs.ui.h  vncsshtunnelthread.cpp  vncsshtunnelthread.h  vnctypes.h  vncview.cpp  (+5 more)
vnc/qtonly/: CMakeLists.txt  README  krdc-vnc-qtonly.pro  main.cpp
zeroconf/: zeroconfpage.cpp  zeroconfpage.h
